Fix more margins, text overflow

--- a/src/components/project.css
+++ b/src/components/project.css
@@ -135,4 +135,7 @@
     width: 100%;
     flex-direction: column;
   }
+  .project-text17 {
+    max-width: 144px;
+  }
 }
